[package]
name = "avail-light-tracking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.21"
sp-core = { version = "34.0.0", features = ["full_crypto"] }
sp-io = { version = "38.0.0", default-features = false, features = ["std"] }
hex = "0.4"
thiserror = "1.0"
