[package]
name = "avail-light-tracking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
anyhow = { version = "1.0" }
chrono = "0.4"
clap = { version = "4.3.23", features = ["derive", "cargo"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { version = "34.0.0", features = ["full_crypto"] }
sp-io = { version = "38.0.0", default-features = false, features = ["std"] }
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }

[[bin]]
name = "avail-light-tracking-service"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "src/bin/client.rs"
